--- a/themes/solarized_light/html/404.html
+++ b/themes/solarized_light/html/404.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="utf-8"/>
     <title>krymtkts: 404</title>
-    <link rel="canonical" href="http://krymtkts.github.io/">
+    <link rel="canonical" href="https://krymtkts.github.io/">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/solarized-dark.min.css" integrity="sha256-90Y+fvi28WF+3jKH4tHEkoQ9WLeFKJjpvCPNOtU9ZvU=" crossorigin="anonymous" />
-    <link href="/blog/css/screen.css" rel="stylesheet" type="text/css" />
+    <link href="/css/screen.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <nav class="navbar navbar-default">
@@ -20,14 +22,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/blog">krymtkts</a>
+                <a class="navbar-brand" href="/">krymtkts</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li ><a href="/blog">Home</a></li>
-                    <li class="active" ><a href="/blog/archives">Archives</a></li>
-                    <li><a href="/blog/pages-output/about">About Me</a></li>
-                    <li><a href="/blog/feed.xml">RSS</a></li>
+                    <li ><a href="/">Home</a></li>
+                    <li class="active" ><a href="/archives">Archives</a></li>
+                    <li><a href="/pages/about">About Me</a></li>
+                    <li><a href="/feed.xml">RSS</a></li>
                     <li><a href="#">More <span class="caret"></span></a></li>
                 </ul>
             </div><!--/.nav-collapse -->
@@ -53,7 +55,7 @@
         </div>
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-        <script src="/blog/js/highlight.pack.js" type="text/javascript"></script>
+        <script src="/js/highlight.pack.js" type="application/javascript"></script>
         <script>hljs.initHighlightingOnLoad();</script>
     </body>
 </html>
